css for map screen done

--- a/client/src/css/layout.scss
+++ b/client/src/css/layout.scss
@@ -70,6 +70,34 @@ html {
     padding-left: 24px;
 }
 
+.mapHeader{
+    text-align: center;
+}
+
+.mapImage{
+    height: 60%;
+    width: 31%;
+    margin-top: 3%;
+    margin-left: 29%;
+    position: absolute;
+}
+
+.map-table {
+    height: 90%;
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+    margin-left: 20%;
+    margin-top: 2%;
+}
+
+.new-map{
+    position: absolute;
+    width: 31%;
+    margin-top: 32.5%;
+    margin-left: 29%;
+}
+
 .nothing-msg {
     display: flex;
     justify-content: space-evenly;
@@ -146,6 +174,13 @@ html {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+}
+
+.sidebar-list{
+    height: 66.1%;
+    width: 28.5%;
+    margin-top: 3%;
+    position: absolute;
 }
 
 .sidebar-header {
