--- a/client/src/css/style.scss
+++ b/client/src/css/style.scss
@@ -67,9 +67,9 @@ html, body {
     color: var(--blue-slate-darker);
 }
 
-.homeImage{
+.homeImage, .mapImage{
     background-color: white;
-    font-size: 50px;
+    font-size: 40px;
 }
 
 .homeText{
@@ -109,10 +109,17 @@ html, body {
 .logo {
 	color: $primary-color;
     font-size: 1.5rem;
-    font-family: "Roboto Mono", monospace;
+    font-family: "Constolas", monospace;
     text-transform: uppercase;
     font-weight: bold;
 } 
+
+.mapHeader{
+    color: white;
+    font-size: 30px;
+    font-family: 'Constolas';
+    background-color: var(--deep-blue-lighter);
+}
 
 .modal-error {
     color: $primary-color;
