--- a/client/src/css/layout.scss
+++ b/client/src/css/layout.scss
@@ -116,6 +116,21 @@ html {
     justify-content: space-evenly;
 }
 
+.region-header{
+    width: 70%;
+    margin-left: 15%;
+    margin-top: 4%;
+    // position: absolute;
+}
+
+.title-name{
+    float: right;
+}
+
+.actual-name{
+    float: left;
+}
+
 .table-text {
     white-space: nowrap;
     overflow: hidden;
@@ -139,36 +154,38 @@ html {
 }
 
 .table-header {
-    width: calc(100% - 56px);
-    box-sizing: border-box;
-    margin-left: 24px;
-    margin-right: 32px;
+    width: 70%;
+    margin-left: 15%;
+    margin-top: 1%;
+    // box-sizing: border-box;
+    // margin-left: 24px;
+    // margin-right: 32px;
 }
 
 .table-header-section {
     width: 100%;
     height: 100%;
-    padding: 0;
-    padding-top: 24px;
+    // padding: 0;
+    // padding-top: 24px;
     padding-bottom: 12px;
 }
 
 .table-header-button {
     padding: 0;
-    margin-left: 36px;
+    margin-right: 36px;
 }
 
 .table-header-button-disabled{
     padding: 0;
-    margin-left: 12px;
+    margin-right: 12px;
     cursor: default;
 }
 
 .table-header-buttons {
-    float: right;
+    float: left;
     height: 100%;
     display: flex;
-    align-items: center;
+    // align-items: center;
 }
 
 .table-entry-buttons {
@@ -222,6 +239,10 @@ html {
 }
 
 .login-modal {
+    width: 350px;
+}
+
+.map-modal {
     width: 350px;
 }
 
