--- a/client/src/css/layout.scss
+++ b/client/src/css/layout.scss
@@ -15,9 +15,11 @@ html {
 }
 
 .container-secondary {
-    width: 100%;
-    height: 100%;
-    display: flex;
+    width: 90%;
+    height: 77%;
+    text-align: center;
+    position: absolute;
+    margin-left: 5%;
 }
 
 .wsidebar {
@@ -30,6 +32,12 @@ html {
     padding-bottom: 12px;
     margin: 3%;
     margin-left: 80%;
+}
+
+.del-item {
+    border: 1px solid black;
+    padding-bottom: 1.5px;
+    padding-top: 1.5px;
 }
 
 .homeImage{
@@ -117,9 +125,9 @@ html {
 }
 
 .region-header{
-    width: 70%;
-    margin-left: 15%;
-    margin-top: 4%;
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 2%;
     // position: absolute;
 }
 
@@ -135,10 +143,11 @@ html {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    font-size: 1.125rem;
+    font-size: 18px;
     padding-bottom: 12px;
     padding-top: 12px;
     cursor: pointer;
+    border: 1px solid black;
 }
 
 .table {
@@ -154,11 +163,10 @@ html {
 }
 
 .table-header {
-    width: 70%;
-    margin-left: 15%;
+    width: 90%;
+    margin-left: 5%;
     margin-top: 1%;
     // box-sizing: border-box;
-    // margin-left: 24px;
     // margin-right: 32px;
 }
 
@@ -168,6 +176,7 @@ html {
     // padding: 0;
     // padding-top: 24px;
     padding-bottom: 12px;
+    display: inline-block;
 }
 
 .table-header-button {
@@ -189,8 +198,8 @@ html {
 }
 
 .table-entry-buttons {
-    padding: 0;
-    margin-left: 36px;
+    // padding: 0;
+    // margin-left: 36px;
     // margin-right: 18px;
 }
 
