--- a/client/src/css/style.scss
+++ b/client/src/css/style.scss
@@ -59,6 +59,10 @@ li {
     list-style-type: none;
 }
 
+.container-secondary {
+    background-color: var(--deep-blue-lighter);
+}
+
 .complete-task {
     color: var(--light-blue);
 }
@@ -109,7 +113,8 @@ li {
 }
 
 .list-item-edit-input, .table-input {
-    font-size: 1.125rem !important;
+    font-size: 18px !important;
+    font-family: "Constolas", monospace;
 }
 
 .logo {
@@ -118,6 +123,10 @@ li {
     font-family: "Constolas", monospace;
     text-transform: uppercase;
     font-weight: bold;
+} 
+
+.logo-active {
+	cursor: pointer;
 } 
 
 .mapHeader{
@@ -167,23 +176,23 @@ li {
     color: $text-color;
 }
 
-.table-entries {
-    scrollbar-width: thin;
-}
+// .table-entries {
+//     scrollbar-width: thin;
+// }
 
-.table-entries::-webkit-scrollbar, .wsidebar::-webkit-scrollbar {
-	width: 5px;
-	height: 8px;
-	background-color: var(--darkblue-gray); 
-}
-.table-entries::-webkit-scrollbar-thumb .wsidebar::-webkit-scrollbar-thumb {
-	width: 5px;
-	height: 8px;
-	background-color: var(--blue-gray); 
-}
+// .table-entries::-webkit-scrollbar, .wsidebar::-webkit-scrollbar {
+// 	width: 5px;
+// 	height: 8px;
+// 	background-color: var(--darkblue-gray); 
+// }
+// .table-entries::-webkit-scrollbar-thumb .wsidebar::-webkit-scrollbar-thumb {
+// 	width: 5px;
+// 	height: 8px;
+// 	background-color: var(--blue-gray); 
+// }
 
 .table-entry {
-    border-bottom: 1px solid;
+    // border-bottom: 1px solid;
     color: $text-color;
     transition: 0.05s ease-in-out;
     height: 46px;
@@ -198,6 +207,10 @@ li {
     color: var(--light-gray);
 }
 
+.table-header-button:hover {
+    background-color: var(--warm-white-transparent);
+}
+
 .table-header-button-disabled {
     transition: 0.1s ease-in-out;
     color: var(--warm-black);
@@ -205,7 +218,7 @@ li {
 
 .table-header {
     background-color: var(--deep-blue-darker);
-    border-bottom: 1px $text-color solid;
+    // border-bottom: 1px $text-color solid;
 
 }
 
@@ -234,9 +247,8 @@ li {
 }
 
 .table-select {
-    font-family: Roboto;
-    //font-size: 14px;
-    font-size: 1.125rem;
+    font-family: "Constolas";
+    font-size: 18px;
     border: none;
     background-color: var(--deep-blue-lighter);
     color: var(--light-gray);
