--- a/client/src/css/layout.scss
+++ b/client/src/css/layout.scss
@@ -66,6 +66,12 @@ html {
     position: absolute;
 }
 
+.darken-text {
+    width: fit-content;
+    height: fit-content;
+    margin: auto;
+}
+
 .list-item-active {
     padding-left: 10px;
     // transform: scale(1);
@@ -300,6 +306,15 @@ html {
     padding: 23px 24px 24px 24px !important;
 }
 
+.list-edit, .list-input {
+    width: 60%;
+    padding-bottom: 12px;
+    padding-top: 12px;
+    margin-top: 1%;
+    margin-left: -15%;
+    position: absolute;
+}
+
 .table-input, .table-select {
     height: 100%;
     display: flex;
@@ -310,4 +325,107 @@ html {
     padding-left: 0px !important;
     padding-right: 0px !important;
     //font-size: 1.125rem;
+}
+
+.region-left{
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    margin-left: 1%
+}
+
+.region-right{
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    margin-left: 48%;
+}
+
+.region-buttons {
+    float: left;
+    margin-left: 4%;
+    margin-top: 1%;
+}
+
+.region-flag {
+    height: 300px;
+    width: 400px;
+    margin-top: 8%;
+    margin-left: 5%;
+    position: absolute
+}
+
+.region-info {
+    height: 40%;
+    width: 90%;
+    position: absolute;
+    margin-top: 55%;
+    margin-left: 5%;
+}
+
+.region-text{
+    margin: 1%;
+    text-align: justify;
+    text-justify: inter-word;
+    width: fit-content;
+}
+
+.region-parent{
+    margin: 1%;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+.region-text-blue, .region-text-parent{
+    display: inline-block;
+    margin-right: 1%;
+}
+
+.sibling-buttons {
+    margin-left: 40%;
+    margin-top: 85%;
+    position: absolute;
+}
+
+.region-landmarks {
+    margin-top: 1%;
+}
+
+.landmark-table {
+    height: 84%;
+    margin-top: 1%;
+    text-align: justify;
+    justify-content: left;
+}
+
+.landmark-text {
+    // margin-left: 10%;
+    text-align: justify;
+    text-justify: inter-word;
+    display: inline-block;
+    position: absolute;
+    margin-top: 1.3%;
+}
+
+.landmark-add {
+    position: absolute;
+    margin-top: 0.6%;
+}
+
+.landmark-input {
+    display: inline-block;
+    position: absolute;
+    margin-top: 10%;
+    width: 250px;
+}
+
+.landmark-container {
+    height: 8%;
+}
+
+.level-text {
+    display: inline-block;
+    justify-content: center;
+    height: 100%;
+    margin: 5px;
 }
